# G2_EDACup

./: .gitignore  RELEASES.md  edacup.json  edacup.mjs  package-lock.json  package.json
edacup/: README.md  edacup.json
edacup/move_sample/: CMakeLists.txt
move_sample/: CMakeLists.txt  actions.cpp  actions.h  constants.h  geometry.cpp  geometry.h  main.cpp  package-lock.json  robot.cpp  robot.h  strategy.cpp  strategy.h
src/: CMakeLists.txt  actions.cpp  actions.h  ball.cpp  ball.h  constants.h  field.cpp  field.h  game_state.h  gamestate.cpp  gamestate.h  geometry.cpp  geometry.h  main.cpp  robot.cpp  robot.h  strategy.cpp  strategy.h  test_coords.cpp  utils.cpp  utils.h
